requirements update
